Updated index and research pages with increased navigation font size and layout improvements

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                 gap: 10px;
             }
         }
+        
     </style>
 </head>
 <body>
@@ -111,13 +112,13 @@
                 <li><a href="etcetera.html">Et Cetera</a></li>
             </ul>
         </div>
-        
         <!-- About Section (Main Page Content) -->
         <div id="about">
-            <h2 class="section-title">About</h2>
+            <h2 class="section-title">Now</h2>
             <p class="section-content">
                 I am a Research Assistant of <a href="https://ctb.ucsf.edu/">Cell and Tissue Biology</a> at The University of California, San Francisco (UCSF). I currently conduct research in <a href="https://www.fredchanglab.ucsf.edu/">Dr. Fred Chang's Laboratory</a>, where I work at the interface of quantitative cell biology, biophysics, and microbial genetics. Here is a <a href="https://www.dropbox.com/scl/fi/dfuq3eup0v7tz3pih2anm/James_Forward_CV_2024.pdf?rlkey=gpchynx92gsfjf2u73j8mjgz1&st=hzsqh434&dl=0">curriculum vitae (CV)</a>.
             </p>
+            <h2 class="section-title">Previously</h2>
             <p class="section-content">
                 I completed my undergraduate studies at <a href="https://www.ubc.ca/">The University of British Columbia (UBC)</a> in Vancouver, Canada. I was previously an Undergraduate Researcher in <a href="https://mbim.ubc.ca/">the Department of Microbiology and Immunology</a>, where I investigated how temperature affects bacterial morphogenesis and growth and developed (attempted to develop) tools to engineer undomesticated bacteria. I also served as the President of the <a href="https://ubcneuroscienceclub.wixsite.com/uncweb">UBC Neuroscience Association</a> and was a member of the UBC Department of Neuroscience’s steering committee.
             </p>
