--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <!-- Link to Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;700&family=Barlow:wght@400;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Updated styles for text color and background color */
         body {
             font-family: "Inconsolata", "Barlow", "Source Sans Pro", sans-serif;
             line-height: 1.8;
             margin: 0;
             padding: 0;
-            background-color: #AEC3B0; /* Light greenish background */
-            color: #dcad1d; /* Dark blue text color */
+            background-color: #AEC3B0;
+            color: #dcad1d;
         }
 
         .container {
@@ -34,7 +33,7 @@
         .home_title {
             font-size: 40px;
             font-weight: 600;
-            color: #001F44; /* Dark blue text color */
+            color: #001F44;
             margin: 0;
         }
 
@@ -47,10 +46,10 @@
         }
 
         .nav a {
-            color: #001F44; /* Dark blue for navigation links */
+            color: #001F44;
             text-decoration: none;
             font-weight: 600;
-            font-size: 22px; /* Increase font size */
+            font-size: 22px;
         }
 
         .nav a:hover {
@@ -58,7 +57,7 @@
         }
 
         a {
-            color: #001F44; /* Dark blue for all hyperlinks */
+            color: #001F44;
             text-decoration: none;
             font-weight: 600;
         }
@@ -81,6 +80,14 @@
             color: #4c6859;
         }
 
+        .right-img {
+            float: right;
+            margin: 60px 0 20px 20px; /* Increase the top margin to bring the image down */
+            max-width: 200px; /* Adjust the width to make the image smaller */
+            height: auto;
+            border-radius: 50%; /* Make the image circular */
+        }
+
         @media (max-device-width: 768px) {
             body {
                 margin-right: 10px;
@@ -97,8 +104,13 @@
                 flex-direction: column;
                 gap: 10px;
             }
+
+            .right-img {
+                float: none;
+                display: block;
+                margin: 20px auto;
+            }
         }
-        
     </style>
 </head>
 <body>
@@ -114,6 +126,8 @@
         </div>
         <!-- About Section (Main Page Content) -->
         <div id="about">
+            <!-- Image -->
+            <img src="james_headshot.png" alt="Image description" class="right-img">
             <h2 class="section-title">Now</h2>
             <p class="section-content">
                 I am a Research Assistant of <a href="https://ctb.ucsf.edu/">Cell and Tissue Biology</a> at The University of California, San Francisco (UCSF). I currently conduct research in <a href="https://www.fredchanglab.ucsf.edu/">Dr. Fred Chang's Laboratory</a>, where I work at the interface of quantitative cell biology, biophysics, and microbial genetics. Here is a <a href="https://www.dropbox.com/scl/fi/dfuq3eup0v7tz3pih2anm/James_Forward_CV_2024.pdf?rlkey=gpchynx92gsfjf2u73j8mjgz1&st=hzsqh434&dl=0">curriculum vitae (CV)</a>.
@@ -124,6 +138,16 @@
             </p>
             <p class="section-content">
                 Outside of science, I have been getting into rock climbing and am an avid music listener and especially love indie rock and west coast hip hop. <a href="https://open.spotify.com/playlist/0xisKJApUhM5eysM2PLWF1?si=ca39b545ba6f4a8b">Here</a> is some music I have been listening to. 
+            </p>
+            <h2 class="section-title">Links</h2>
+            <p class="section-content">
+                Email: jcforward01 at gmail dot com
+            </p>
+            <p class="section-content">
+                Twitter: <a href="https://twitter.com/ForwardJames">@ForwardJames</a> 
+            </p>
+            <p class="section-content">
+                LinkedIn: <a href="https://www.linkedin.com/in/jamescforward/">Here</a> 
             </p>
         </div>
     </div>
