updates and adding etcetera.html

--- a/index.html
+++ b/index.html
@@ -136,8 +136,9 @@
             <p class="section-content">
                 I completed my undergraduate studies at <a href="https://www.ubc.ca/">The University of British Columbia (UBC)</a> in Vancouver, Canada. I was previously an Undergraduate Researcher in <a href="https://mbim.ubc.ca/">the Department of Microbiology and Immunology</a>, where I investigated bacterial morphogenesis and growth and developed (attempted to develop) tools to engineer undomesticated bacteria. I also served as the President of the <a href="https://ubcneuroscienceclub.wixsite.com/uncweb">UBC Neuroscience Association</a> and was a member of the UBC Department of Neuroscience’s steering committee.
             </p>
+            <h2 class="section-title">Outside of Science</h2>
             <p class="section-content">
-                Outside of science, I have been getting into rock climbing and am an avid music listener and especially love indie rock and west coast hip hop. <a href="https://open.spotify.com/playlist/0xisKJApUhM5eysM2PLWF1?si=ca39b545ba6f4a8b">Here</a> is some music I have been listening to. 
+                I have been getting into rock climbing and am an avid music listener and especially love indie rock and west coast hip hop. <a href="https://open.spotify.com/playlist/0xisKJApUhM5eysM2PLWF1?si=ca39b545ba6f4a8b">Here</a> is some music I have been listening to. 
             </p>
             <h2 class="section-title">Links</h2>
             <p class="section-content">
