--- a/research.html
+++ b/research.html
@@ -136,13 +136,13 @@
 
             <h3 class="sub-title">Finlay Laboratory, UBC</h3>
             <p class="section-content">
-                In the spring of 2022, I took a class on bacterial pathogenesis that would lead me to a range of interests centered around microbes. Taking this course prompted me to ask many questions, to which I would ask the instructor, a research associate at <a href="https://finlaylab.msl.ubc.ca/">the Finlay Lab</a>, which would spark different conversations. Eventually, I asked if I could do research with him, and I soon began working in the lab.
+                In the spring of 2022, I took a class on bacterial pathogenesis that would lead me to a range of interests centered around microbes My interactions with the course instructor, a research associate at <a href="https://finlaylab.msl.ubc.ca/">the Finlay Lab</a>, led to numerous engaging discussions. Motivated by these conversations, I asked if I could do research with him, and I soon began working in the lab.
             </p>
             <p class="section-content">
                 One of the first projects I worked on was looking at the probiotic properties of <i>E.coli</i> Nissle, focusing on its Type Six Secretion System (T6SS). My supervisor and I targeted effector proteins of the T6SS into cells and assessed their toxic effects on different cellular compartments. Additionally, I took on more independence and investigated the influence of metabolic supplements on bacterial growth patterns and gene expression. 
             </p>
             <p class="section-content">
-            In this first research experience, I was first exposed to bioinformatic tools and how powerful they were in characterizing different components (something I look to incorporate into future projects). It was also here that I received exceptional mentorship and realized the importance of working with highly driven people. 
+            In this first research experience, I was exposed to bioinformatic tools and how powerful they were in characterizing different components (something I look to incorporate into future projects). It was also here that I got my first taste of exceptional mentorship and realized the importance of working with highly driven people. 
             </p>
         </div>
     </div>
