updates to colour

--- a/etcetera.html
+++ b/etcetera.html
@@ -85,7 +85,7 @@
             font-size: 20px;
             margin: 10px 0; /* Reduced margin */
             line-height: 1.5;
-            color: #4c6859; /* Off-white color for content text */
+            color: #153726; /* Off-white color for content text */
         }
 
         @media (max-device-width: 768px) {
