--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             font-size: 20px;
             margin: 10px 0;
             line-height: 1.5;
-            color: #4c6859;
+            color: #153726;
         }
 
         .right-img {
@@ -130,7 +130,7 @@
             <img src="james_headshot.png" alt="Image description" class="right-img">
             <h2 class="section-title">Now</h2>
             <p class="section-content">
-                I am a Research Assistant of <a href="https://ctb.ucsf.edu/">Cell and Tissue Biology</a> at The University of California, San Francisco (UCSF). I currently conduct research in <a href="https://www.fredchanglab.ucsf.edu/">Dr. Fred Chang's Laboratory</a>, where I work at the interface of quantitative cell biology, biophysics, and microbial genetics. 
+                I am a Research Assistant of <a href="https://ctb.ucsf.edu/">Cell and Tissue Biology</a> at The University of California, San Francisco (UCSF). I currently conduct research in <a href="https://www.fredchanglab.ucsf.edu/">Dr. Fred Chang's Laboratory</a>, where I work at the interface of quantitative cell biology and microbial genetics. 
             </p>
             <h2 class="section-title">Previously</h2>
             <p class="section-content">
@@ -145,10 +145,10 @@
                 Email: jcforward01 at gmail dot com
             </p>
             <p class="section-content">
-                Twitter: <a href="https://twitter.com/ForwardJames">@ForwardJames</a> 
+                <a href="https://twitter.com/ForwardJames">Twitter</a> 
             </p>
             <p class="section-content">
-                LinkedIn: <a href="https://www.linkedin.com/in/jamescforward/">Here</a> 
+                <a href="https://www.linkedin.com/in/jamescforward/">LinkedIn</a> 
             </p>
         </div>
     </div>
